@@ -38,6 +38,10 @@
 <p>2018-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/widget.c (XEditText): Fix compilation warnings about
+cases which fall-through.</li>
+<li>magick/display.c (MagickXAnnotateEditImage): Fix compilation
+warnings about cases which fall-through.</li>
 <li>coders/pict.c (WritePICTImage): Add more checks to memory
 allocation calculations.</li>
 <li>magick/pixel_cache.c (DestroyCacheInfo): Eliminate intentional
